fix layout issues

--- a/css/core/_links.css
+++ b/css/core/_links.css
@@ -36,6 +36,7 @@
     background-repeat: no-repeat;
     background-position: 0 center;
     padding: 0 0 0 18px;
+    word-wrap: break-word;
 }
 /* external link */
 .dokuwiki a.urlextern {
