--- a/css/template.less
+++ b/css/template.less
@@ -860,7 +860,8 @@ svg.icon {
 
 .dw-content-tags {
   font-size: 90%;
-  padding-top: 0.5rem;
+  margin-top: 6rem;
+  padding-top: 1.5rem;
   border-top: 1px solid #ddd;
 }
 
